--- a/mcs01_04/pyproject.toml
+++ b/mcs01_04/pyproject.toml
@@ -7,6 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+faker = "^36.1.1"
+requests = "^2.32.3"
+aiohttp = "^3.11.13"
+httpx = "^0.28.1"
+aiopath = "^0.7.7"
+aiofile = "^3.9.0"
+aioshutil = "^1.5"
+websockets = "^15.0"
+names = "^0.3.0"
 
 
 [build-system]
